@@ -1,3 +1,10 @@
+2010-07-19  d+w3m@vdr.jp
+
+	* [w3m-dev 04238] [patch] simple preserve space
+	* rc.c: Introduce option simple_preserve_space.
+	* fm.h: add global variable SimplePreserveSpace.
+	* file.c (HTMLlineproc0): check SimplePreserveSpace.
+
 2010-07-18 d+w3m@vdr.jp
 
 	* [w3m-dev 04319] Re: w3m's bugs from bugs.debian.org
@@ -10,6 +17,9 @@
 	* display.c (displayBuffer): use is_html_type() instead of strcasecmp().
 	* buffer.c (reshapeBuffer): use is_html_type() instead of strcasecmp().
 	* backend.c (internal_get): use is_html_type() instead of strcasecmp().
+	* main.c (vwSrc, reload, dispI, stopI): use is_html_type() instead of strcasecmp().
+	* proto.h: add is_html_type()
+	* url.c: add "xhtml" to DefaultGuess.
 
 2010-07-18 Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
